小键盘间隙

--- a/app/cn/pay.html
+++ b/app/cn/pay.html
@@ -68,13 +68,13 @@
 
 
     </form>
-    <div class="top-control-150">
+    <div class="top-control-150" onclick="dealThis(event)" style="padding-bottom: 40px">
         <!--提交当前表单切记 要传入form id -->
         <a href="javascript:void(0)" onclick="submit('payOrder')" id="submitData" class="big-font-50 big-button-blue">
             立即支付</a>
 
     </div>
-    <br/>
+
     <div class="row key-border-customer-hide" id="keyBorderM">
         <div class="col-sm-12">
             <div class="col-sm-4 key-border-c-right key-border-c-bottom event-click">1</div>
