--- a/app/500.html
+++ b/app/500.html
@@ -18,16 +18,16 @@
         <section class="text-center top-control-80">
             <img src="img/error.png">
             <br/><br/><br/><br/><br/><br/>
-            <span class="font-weight-bold big-font-120 text-color-blue">404!</span>
+            <span class="font-weight-bold big-font-120 text-color-blue">500!</span>
             <br/><br/><br/>
             <span class="big-font-40 text-color-g">
-               Sorry! Page not found...
+               Sorry! Internal error...
             </span>
             <br/><br/>
             <br/><br/><br/>
             <div class="top-control-150">
                 <a href="javascript:void(0)" class="big-font-50 big-button-blue" onclick="javascript:history.back(-1);">
-                    返回</a>
+                    return</a>
             </div>
         </section>
         <br/><br/><br/>
