1.上传图片预览

--- a/app/cn/payDiscuss.html
+++ b/app/cn/payDiscuss.html
@@ -93,19 +93,19 @@
                        <div class="center_box">
                        </div>
                         <div class="right_box text-right box">
-                            <div class="pic-small" >
+                            <div class="pic-small file-hide" id="pic-1">
                                 <div class="recommend-box-content">
                                     <span class="close-pic-small" onclick="deletePic(1)">x</span>
                                     <img class="pic-view" id="img-1">
                                 </div>
                             </div>
-                            <div class="pic-small">
+                            <div class="pic-small file-hide" id="pic-2">
                                 <div class="recommend-box-content">
                                     <span class="close-pic-small" onclick="deletePic(2)">x</span>
                                     <img class="pic-view" id="img-2">
                                 </div>
                             </div>
-                            <div class="pic-small">
+                            <div class="pic-small file-hide" id="pic-3">
                                 <div class="recommend-box-content">
                                     <span class="close-pic-small" onclick="deletePic(3)">x</span>
                                     <img class="pic-view" id="img-3">
