1.上传图片预览 加上jpeg

--- a/app/en/payDiscuss.html
+++ b/app/en/payDiscuss.html
@@ -78,15 +78,15 @@
                         <div class="left_box text-left">
                             <span class="fileinput-button" id="box-file-1">
                                 <ico class="glyphicon glyphicon-camera blue-pic-icon"></ico>
-                                <input type="file" id="fileEvent1" onchange="preImg(1)" accept="image/*;capture=camcorder" mutiple>
+                                <input type="file" id="fileEvent1" onchange="preImg(1)" accept="image/*;capture=camcorder">
                              </span>
                             <span class="fileinput-button file-hide" id="box-file-2">
                                 <ico class="glyphicon glyphicon-camera blue-pic-icon"></ico>
-                                <input type="file" id="fileEvent2" onchange="preImg(2)" accept="image/*;capture=camcorder" mutiple>
+                                <input type="file" id="fileEvent2" onchange="preImg(2)" accept="image/*;capture=camcorder">
                              </span>
                             <span class="fileinput-button file-hide" id="box-file-3">
                                 <ico class="glyphicon glyphicon-camera blue-pic-icon"></ico>
-                                <input type="file" id="fileEvent3" onchange="preImg(3)"  accept="image/*;capture=camcorder" mutiple>
+                                <input type="file" id="fileEvent3" onchange="preImg(3)"  accept="image/*;capture=camcorder">
                              </span>
                             <span class="big-font-30 text-color-g">(up to 3 photos)</span>
                         </div>
