1.ios无法提交pay表单问题

--- a/app/cn/pay.html
+++ b/app/cn/pay.html
@@ -68,11 +68,21 @@
 
 
     </form>
-    <div class="top-control-150" onclick="dealThis(event)" style="padding-bottom: 40px">
+    <div class="box" style="height: 300px">
+        <div class="left_box" style="width: 200px" onclick="dealThis(event)"></div>
         <!--提交当前表单切记 要传入form id -->
-        <a href="javascript:void(0)" onclick="submit('payOrder')" id="submitData" class="big-font-50 big-button-blue">
-            立即支付</a>
+        <div class="center_box">
+            <div style="height: 160px" onclick="dealThis(event)">
 
+            </div>
+            <a href="javascript:void(0)" onclick="submit('payOrder')" id="submitData" class="big-font-50 big-button-blue" >
+                立即支付</a>
+            <div style="height: 40px" onclick="dealThis(event)">
+
+            </div>
+        </div>
+        <div class="right_box" onclick="dealThis(event)" style="width: 200px" onclick="dealThis(event)">
+        </div>
     </div>
 
     <div class="row key-border-customer-hide" id="keyBorderM">
